<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity"
	>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginStart="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginTop="0dp"
		android:layout_marginEnd="0dp"
		android:layout_marginRight="0dp"
		android:layout_marginBottom="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:id="@+id/parentView">

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/childView"
			>

			<TextView
				android:id="@+id/textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintHorizontal_bias="0.41"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<Spinner
				android:id="@+id/spinnerContacts"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView3" />

			<Spinner
				android:id="@+id/spinnerTimeDuration"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.45"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView4" />

			<Button
				android:id="@+id/startbutton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				android:onClick="startLogger"
				android:text="@string/start_button"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/spinnerTimeDuration" />

			<Button
				android:id="@+id/stopButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				android:text="@string/stop_button"
				android:onClick="stopLogger"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/startbutton"

				/>

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				android:text="@string/cross"
				android:textSize="30sp"
				android:onClick="removeContact"
				app:layout_constraintBottom_toBottomOf="@+id/textView"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="@+id/textView" />

			<TextView
				android:id="@+id/textView3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				android:text=""
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.502"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/editText" />

			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				android:text="@string/duration"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/spinnerContacts" />

			<EditText
				android:id="@+id/editText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				android:ems="10"
				android:hint="@string/hint_search"
				android:inputType="textPersonName"
				android:text=""
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.45"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView" />

			<TextView
				android:id="@+id/textView5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:onClick="removeSearchText"
				android:text="@string/clear"
				android:textAlignment="center"
				app:layout_constraintBottom_toBottomOf="@+id/editText"
				app:layout_constraintStart_toEndOf="@+id/editText"
				app:layout_constraintTop_toTopOf="@+id/editText"
				app:layout_constraintVertical_bias="0.6" />

		</android.support.constraint.ConstraintLayout>
	</ScrollView>


</android.support.constraint.ConstraintLayout>